syntax = "proto3";

package api;

import "google/api/annotations.proto";

// Defines the import path that should be used to import the generated package
// and the package name
option go_package = "github.com/iamrajiv/helloworld-grpc-gateway/proto;api";

// Here is the overall greeting service definition where we define all our endpoints
service Greeter {
  // Sends a greeting
  rpc SayHello(HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/v1/example/echo"
      body: "*"
    };
  }
  // Adds two numbers
  rpc AddNumbers(AddNumbersRequest) returns (AddNumbersResponse) {
    option (google.api.http) = {
      post: "/v1/example/add"
      body: "*"
    };
  }
  
}




// The request message containing the user's name
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

// The request message for adding two numbers
message AddNumbersRequest {
  int32 a = 1;
  int32 b = 2;
}

// The response message containing the sum of the two numbers
message AddNumbersResponse {
  int32 result = 1;
}